# rs-inscriptions

./: .gitignore  Autenticación  Cargo.toml  Certificado  Code  Correcciones  Directrices  Privately  Repositorios  Repositorios c  Rs-inscriptions  Seguridad código G  Seguridad de código  upgrade.json
.github/workflows/: Hadolint.yml  alibabacloud.yml  anchore.yml  apisec-scan.yml  aws.yml  azure-webapps-node.yml  bandit.yml  bearer.yml  brakeman.yml  ci.yml  clj-holmes.yml  clj-watson.yml  codacy.yml  codeql.yml  credo.yml  crunch42.yml  defender-for-devops.yml  detekt.yml  devskim.yml  endorlabs.yml  eslint.yml  ethicalcheck.yml  flawfinder.yml  fortify.yml  frogbot-scan-and-fix.yml  frogbot-scan-pr.yml  hadolint.yml  ibm.yml  jscrambler-code-integrity.yml  mobsf.yml  msvc.yml  njsscan.yml  nowsecure-mobile-sbom.yml  on_pull_request_build_contracts.yml  on_release_build_contracts.yml  openshift.yml  phpmd.yml  pmd.yml  powershell.yml  prisma.yml  (+11 more)
interaction/: devnet.snippets.sh  mainnet.snippets.sh
meta/: Cargo.toml
meta/src/: main.rs
src/: inscriptions.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
